--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row" id="header">
-            <h1 class="col-md-12">Do You Know ...</h1>
+            <h1 class="col-md-12">Did You Know ...</h1>
         </div>
 
         <div class="row">
