--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 
 
     </div>
-
-    <script src='https://code.jquery.com/jquery-3.3.1.min.js' integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8='
-        crossorigin='anonymous'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
 
